--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Thumbs.db
 platforms/ios/www/
 www/
+platforms/ios/club.xcodeproj/project.xcworkspace/xcuserdata/bear.xcuserdatad/UserInterfaceState.xcuserstate
